<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Details"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age_text_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_18_45"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintRight_toLeftOf="@id/guideline" />

    <TextView
        android:id="@+id/age_data_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/heading"
        tools:text="18+" />

    <TextView
        android:id="@+id/dose1_text_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_1"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_text_dia"
        app:layout_constraintRight_toLeftOf="@id/guideline" />

    <TextView
        android:id="@+id/dose1_data_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/age_data_dia"
        tools:text="256"  />

    <TextView
        android:id="@+id/dose2_text_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_2"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dose1_text_dia"
        app:layout_constraintRight_toLeftOf="@id/guideline" />

    <TextView
        android:id="@+id/dose2_data_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/dose1_data_dia"
        tools:text="256"  />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dose2_text_dia" >

        <TextView
            android:id="@+id/address_text_dia"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address_data_dia"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            tools:text="Adarsh Nagar Site 2Sarvodaya Kanya Vidyalaya Adarsh Nagar North Delhi- 110033" />

    </LinearLayout>

    <TextView
        android:id="@+id/paid_text_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_paid"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintRight_toLeftOf="@id/guideline" />

    <TextView
        android:id="@+id/paid_data_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        tools:text="YES" />

    <TextView
        android:id="@+id/vaccine_text_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaccine_name"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paid_text_dia"
        app:layout_constraintRight_toLeftOf="@id/guideline" />

    <TextView
        android:id="@+id/vaccine_data_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/paid_data_dia"
        tools:text="Covisheild" />

    <Button
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/book"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaccine_data_dia" />

</androidx.constraintlayout.widget.ConstraintLayout>
